# lets_habr

./: .gitignore  Cargo.toml  Cross.toml  README.md  aarch64_build.sh  arm_build.sh  build.rs  build_for_arm_device.sh  deploy.sh
.cargo/: config.toml
rpm/: com.lmaxyz.LetsHabr.desktop  com.lmaxyz.LetsHabr.spec
src/: main.rs  utils.rs
src/habr_client/: article.rs  hub.rs  mod.rs
ui/: appwindow.slint
ui/components/: article_details.slint  articles_list.slint  common.slint  hubs_list.slint
