[package]
name = "lets_habr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = {version="1.8.0", default-features = false, features = [
    "std",
    "compat-1-2",
    # "backend-qt"
    "backend-winit-wayland",
    "renderer-femtovg"
]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
image = {version="0.25", default-features=false, features = ["jpeg", "png", "bmp", "gif", "webp"]}
scraper = "0.20"
tokio = {version="1.41.0", features=["full"]}
reqwest = {version="0.12.*", default-features=false, features=["rustls-tls", "http2"]}
chrono = "0.4"
simple_logger = "*"
log ="*"

[build-dependencies]
slint-build = "1.8.0"

[patch.crates-io]
# winit = {git="https://github.com/lmaxyz/winit", branch="aurora"}
