[package]
name = "lets_habr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.10", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit-wayland",
    # "renderer-skia-opengl",
    "renderer-femtovg",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "bmp",
    "gif",
    "webp",
] }
scraper = "0.23.1"
tokio = { version = "1.41.0", default-features = false, features = [
    "rt-multi-thread",
    "time",
    # "macros",
    # "net",
] }
reqwest = { version = "0.12.*", default-features = false, features = [
    "rustls-tls",
    # "default-tls",
    "http2",
] }
chrono = "0.4"
# simple_logger = "*"
# log = "*"

[build-dependencies]
slint-build = "1.10"


[patch.crates-io]
# winit = { git = "https://github.com/lmaxyz/winit", branch = "aurora" }
glutin = { git = "https://github.com/lmaxyz/glutin", branch = "aurora_device_fix" }
i-slint-core = {path = "../../rust/slint/internal/core"}
slint = {path = "../../rust/slint/api/rs/slint"}
